--- a/cv_moreiradiego/css/styles.css
+++ b/cv_moreiradiego/css/styles.css
@@ -18,7 +18,7 @@
   margin-left: 40px;
 }
 
-.container h5{
+.container h2{
   color: rgb(30, 1, 87);
   font-size: 20px;
   margin-left: 40px;
@@ -124,7 +124,8 @@
 
 .info{
   float: right;
-  width: 78%;
+  width: 77%;
+  margin-right: 10px;
 }
 
 .info p{
@@ -143,6 +144,7 @@
 .info-redes{
   float: left;
   width: 20%;
+  margin-left: 10px;
 }
 
 .info-redes p{
@@ -168,4 +170,45 @@
   margin: 10px;
   width: 250px;
   height: 150px;
+}
+
+.info-edu{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.info-edu-ul li{
+  /* display: inline-block; */
+  /* text-decoration: none; */
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
+.info-cur{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.info-cur-ul li{
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
+.info-exp{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.info-exp-ul li{
+  margin-left: 30px;
+  margin-top: 10px;
+  color: rgb(255, 255, 255);
+}
+
+.ir-arriba {
+	display:none;
+	padding:20px;
+	position: fixed;
+	bottom:20px;
+	right:20px;
 }
